--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -47,7 +47,7 @@
             </table>
             <p class="btn_set">
                 <a th:href="@{/review/new( boardId=${post.boardId} )}" class="btns btn_bdr4 btn_mid">수정</a>
-                <button type="button" class="btns btn_bdr1 btn_mid">삭제</button>
+                <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>
                 <a th:href="@{/review/list}" class="btns btn_bdr3 btn_mid">목록</a>
             </p>
         </section>
@@ -64,5 +64,32 @@
 <script th:src="@{/js/common.js}"></script>
 <script src="https://kit.fontawesome.com/79613ae794.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+<script th:inline="javascript">
+        /*<![CDATA[*/
+
+            // 게시글 삭제
+            function deletePost() {
+                const boardId = [[ ${post.boardId} ]];
+
+                if ( !confirm(boardId + '번 게시글을 삭제할까요?') ) {
+                    return false;
+                }
+
+                const formHtml = `
+                    <form id="deleteForm" action="/review/${boardId}" method="post">
+                        <input type="hidden" id="boardId" name="boardId" value="${boardId}" />
+                    </form>
+                `;
+                console.log(formHtml);
+
+                const doc = new DOMParser().parseFromString(formHtml, 'text/html');
+                const form = doc.body.firstChild;
+                document.body.append(form);
+                document.getElementById('deleteForm').submit();
+            }
+
+        /*]]>*/
+
+        </script>
 </body>
 </html>
