--- a/src/main/resources/templates/review/reviewList.html
+++ b/src/main/resources/templates/review/reviewList.html
@@ -1,126 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="fragments/header :: header">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" th:href="@{/css/default.css}" />
-    <link rel="stylesheet" th:href="@{/css/common.css}" />
-    <link rel="stylesheet" th:href="@{/css/content.css}" />
-    <link rel="stylesheet" th:href="@{/css/button.css}" />
+<html th:replace="~{template/layoutExtend/layoutFile :: layout(~{::title},~{::link},~{::content})}"
+      xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>⚓리뷰</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/themes/smoothness/jquery-ui.css}">
 </head>
-
 <body>
 
-<div th:replace="fragments/bodyHeader :: bodyHeader" />
-<!--&lt;!&ndash;<th:block th:if="${loginMember == null}">&ndash;&gt;-->
-<!--&lt;!&ndash;    <th:nav th:if="${loginMember == null}">&ndash;&gt;-->
-<!--    <th:block th:if="${loginMember == null}">-->
-<!--        <div class="inner">-->
-<!--            <div class="nav-container">-->
-<!--                <div><h1 class="nav-title">부산, 여기는</h1></div>-->
-<!--                <div>-->
-<!--                    <button class="nav-contact" onclick="location.href='/members/login'">Login</button>-->
-<!--                    <button class="nav-contact" type="button" onclick="location.href='/members/new'">Join</button>-->
-<!--                    <button class="nav-contact" type="button" onclick="location.href=''">Review</button>-->
-<!--                </div>-->
+<content>
+    <div class="content">
+        <section>
+            <!--/* 검색 */-->
+            <div class="search_box inner">
+                <form id="searchForm" onsubmit="return false;" autocomplete="off">
+                    <div class="sch_group fl">
+                        <select title="검색 유형 선택">
+                            <option value="">전체 검색</option>
+                            <option value="">제목</option>
+                            <option value="">내용</option>
+                        </select>
+                        <input type="text" placeholder="키워드를 입력해 주세요." title="키워드 입력"/>
+                        <button type="button" class="bt_search"><i class="fas fa-search"></i><span class="skip_info">검색</span></button>
+                    </div>
+                </form>
+            </div>
 
-<!--            </div>-->
-<!--        </div>-->
-<!--    </th:block>-->
-<!--&lt;!&ndash;</th:block>&ndash;&gt;-->
+            <!--/* 리스트 */-->
+            <div class="tb tb_col inner">
+                <table class="tb tb_col" table width="900" border="1" cellpadding="100">
+                    <colgroup>
+                        <col style="width:50px;"/><col style="width:auto;"/><col style="width:7.5%;"/><col style="width:10%;"/><col style="width:30%;"/><col style="width:50px;"/>
+                    </colgroup>
+                    <thead>
+                    <tr>
+                        <!--                <th scope="col"><input type="checkbox"/></th>-->
+                        <th scope="col">번호</th>
+                        <th scope="col">제목</th>
+                        <th scope="col">작성자</th>
+                        <th scope="col">식당</th>
+                        <th scope="col">등록일</th>
+                        <th scope="col">조회</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:if="${not #lists.isEmpty( posts )}" th:each="row, status : ${posts}">
+                        <!--                <td><input type="checkbox"/></td>-->
+<!--                        <td th:text="${row.noticeYn == false ? (status.size - status.index) : '공지'}"></td>-->
+                        <td><a th:href="@{|/review/${row.boardId}|}" th:text="${row.boardId}"></a></td>
+                        <td class="tl"><a th:href="@{|/review/${row.boardId}|}" th:text="${row.title}"></a></td>
+                        <td th:text="${row.memberId}"></td>
+                        <td th:text="${row.shopId}"></td>
+                        <td th:text="${#temporals.format( row.createdAt, 'yyyy-MM-dd HH:mm' )}"></td>
+                        <td th:text="${row.viewCnt}"></td>
+                    </tr>
 
-<!--&lt;!&ndash;<th:block th:unless="${loginMember != null}">&ndash;&gt;-->
-<!--&lt;!&ndash;    <th:nav th:unless="${loginMember != null}">&ndash;&gt;-->
-<!--    <th:block th:if="${loginMember != null}">-->
-<!--        <div class="inner">-->
-<!--            <div class="nav-container">-->
-<!--                <h1 class="nav-title">부산, 여기는</h1>-->
-<!--                    &lt;!&ndash;                <button type="button" onclick="location.href='/members/login'">Login</button>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                <button type="button" onclick="location.href='/members/new'">Join</button>&ndash;&gt;-->
-<!--                    <button type="button" onclick="location.href='/members/logout'">Logout</button>-->
-<!--                    <button>Review</button>-->
-<!--                    <button>Review 쓰기 </button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </th:block>-->
-<!--&lt;!&ndash;</th:block>&ndash;&gt;-->
+                    <tr th:unless="${not #lists.isEmpty( posts )}">
+                        <td colspan="5">
+                            <div class="no_data_msg">검색된 결과가 없습니다.</div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
+            <!--/* 페이지네이션 */-->
+            <div class="paging inner">
+                <a href="#" class="page_bt first">첫 페이지</a><a href="#" class="page_bt prev">이전 페이지 그룹</a>
+                <p><span class="on">1</span><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">8</a><a href="#">9</a><a href="#">10</a></p>
+                <a href="#" class="page_bt next">다음 페이지 그룹</a><a href="#" class="page_bt last">마지막 페이지</a>
+            </div>
 
+            <!--/* 버튼 */-->
+            <p class="btn_set tr inner">
+                <a th:href="@{/review/new}" class="btns btn_st3 btn_mid">글쓰기</a>
+            </p>
+        </section>
+    </div> <!--/* .content */-->
 
-
-
-
-<div class="content">
-    <section>
-        <!--/* 검색 */-->
-        <div class="search_box inner">
-            <form id="searchForm" onsubmit="return false;" autocomplete="off">
-                <div class="sch_group fl">
-                    <select title="검색 유형 선택">
-                        <option value="">전체 검색</option>
-                        <option value="">제목</option>
-                        <option value="">내용</option>
-                    </select>
-                    <input type="text" placeholder="키워드를 입력해 주세요." title="키워드 입력"/>
-                    <button type="button" class="bt_search"><i class="fas fa-search"></i><span class="skip_info">검색</span></button>
-                </div>
-            </form>
-        </div>
-
-        <!--/* 리스트 */-->
-        <div class="tb tb_col inner">
-        <table class="tb tb_col" table width="900" border="1" cellpadding="100">
-            <colgroup>
-                <col style="width:50px;"/><col style="width:auto;"/><col style="width:7.5%;"/><col style="width:10%;"/><col style="width:15%;"/><col style="width:7.5%;"/>
-            </colgroup>
-            <thead>
-            <tr>
-<!--                <th scope="col"><input type="checkbox"/></th>-->
-                <th scope="col">번호</th>
-                <th scope="col">제목</th>
-                <th scope="col">작성자</th>
-                <th scope="col">식당</th>
-                <th scope="col">등록일</th>
-                <th scope="col">조회</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:if="${not #lists.isEmpty( posts )}" th:each="row, status : ${posts}">
-<!--                <td><input type="checkbox"/></td>-->
-                <td th:text="${row.noticeYn == false ? (status.size - status.index) : '공지'}"></td>
-                <td class="tl"><a th:href="@{|/review/${row.boardId}|}" th:text="${row.title}"></a></td>
-                <td th:text="${row.memberId}"></td>
-                <td th:text="${row.shopId}"></td>
-                <td th:text="${#temporals.format( row.createdAt, 'yyyy-MM-dd HH:mm' )}"></td>
-                <td th:text="${row.viewCnt}"></td>
-            </tr>
-
-            <tr th:unless="${not #lists.isEmpty( posts )}">
-                <td colspan="5">
-                    <div class="no_data_msg">검색된 결과가 없습니다.</div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        </div>
-
-        <!--/* 페이지네이션 */-->
-        <div class="paging inner">
-            <a href="#" class="page_bt first">첫 페이지</a><a href="#" class="page_bt prev">이전 페이지 그룹</a>
-            <p><span class="on">1</span><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">8</a><a href="#">9</a><a href="#">10</a></p>
-            <a href="#" class="page_bt next">다음 페이지 그룹</a><a href="#" class="page_bt last">마지막 페이지</a>
-        </div>
-
-        <!--/* 버튼 */-->
-        <p class="btn_set tr inner">
-            <a th:href="@{/review/new}" class="btns btn_st3 btn_mid">글쓰기</a>
-        </p>
-    </section>
-</div> <!--/* .content */-->
-
-<div class="inner">
-    <div th:replace="fragments/footer :: footer" />
-</div>
+</content>
 
 </body>
 </html>
