--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -2,7 +2,7 @@
 <html th:replace="~{template/layoutExtend/layoutFile :: layout(~{::title},~{::link},~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>⚓샘플</title>
+    <title>⚓리뷰</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/themes/smoothness/jquery-ui.css}">
 </head>
@@ -53,7 +53,44 @@
             </section>
         </div> <!--/* .content */-->
     </main>
+
+    <script th:src="@{/js/function.js}"></script>
+    <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
+    <script src="https://kit.fontawesome.com/79613ae794.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+
+            // 게시글 삭제
+            function deletePost() {
+                const boardId = [[ ${post.boardId} ]];
+                console.log(boardId);
+
+                if ( !confirm(boardId + '번 게시글을 삭제할까요?') ) {
+                    return false;
+                }
+
+                const formHtml = `
+                    <form id="deleteForm" action="/review/${boardId}" method="post">
+                        <input type="hidden" id="boardId" name="boardId" value="${boardId}" />
+                    </form>
+                `;
+                console.log(formHtml);
+
+                const doc = new DOMParser().parseFromString(formHtml, 'text/html');
+                const form = doc.body.firstChild;
+                document.body.append(form);
+                document.getElementById('deleteForm').submit();
+            }
+
+        /*]]>*/
+
+</script>
 </content>
+
+
 
 </body>
 </html>
