--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -5,38 +5,58 @@
     <title>⚓회원가입</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
+
+<style>
+        .container {
+            max-width: 560px;
+        }
+
+        .field-error {
+        border-color: #dc3545;
+        color: #dc3545;
+        }
+    </style>
 <body>
 
 <content>
-    <div class="inner">
-        <h3 style="margin:5px">회원가입</h3>
+    <div class="container">
+    <div class="py-5 text-center">
+        <h2>⚓회원 가입</h2>
+    </div>
+
+        <div class="container">
+
         <form role="form" action="/members/new" th:object="${memberForm}" method="post">
             <div>
-                <label th:for="name">이름&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                <input type="text" th:field="*{name}" placeholder="이름을 입력하세요">
+                <label th:for="name">이름</label>
+                <input class="form-control" type="text" th:field="*{name}" placeholder="이름을 입력하세요.">
                 <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
             </div>
             <div>
                 <label th:for="pw">비밀번호</label>
-                <input type="password" th:field="*{pw}" placeholder="비밀번호를 입력하세요">
+                <input class="form-control" type="password" th:field="*{pw}" placeholder="비밀번호는 그냥 1234...">
                 <p th:if="${#fields.hasErrors('pw')}" th:errors="*{pw}" class="fieldError">Incorrect data</p>
             </div>
             <div>
-                <label th:for="nickName">닉네임&nbsp;&nbsp;&nbsp;</label>
-                <input type="text" th:field="*{nickName}" placeholder="닉네임을 입력하세요">
+                <label th:for="nickName">닉네임</label>
+                <input class="form-control" type="text" th:field="*{nickName}" placeholder="닉네임을 입력하세요.">
                 <p th:if="${#fields.hasErrors('nickName')}" th:errors="*{nickName}" class="fieldError">Incorrect data</p>
             </div>
             <div>
-                <label th:for="sex">성별&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                <select name="sex" th:field="*{sex}">
+                <label th:for="sex">성별</label>
+                <select class="form-control" name="sex" th:field="*{sex}">
                     <option value="">선택</option>
                     <option value="M">남자</option>
                     <option value="F">여자</option>
                 </select>
             </div>
-            <button style="margin:15px" type="submit" class="btn btn-primary">Submit</button>
+
+            <hr class="my-4">
+
+            <button type="submit" class="w-100 btn btn-primary btn-lg">Submit</button>
         </form>
         <br/>
+    </div>
     </div>
 </content>
 
