--- a/src/main/resources/templates/review/reviewWrite.html
+++ b/src/main/resources/templates/review/reviewWrite.html
@@ -1,88 +1,83 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html th:replace="~{template/layoutExtend/layoutFile :: layout(~{::title},~{::link},~{::content})}"
+      xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>⚓리뷰 작성</title>
+<!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
+    <link rel="stylesheet" href="/style.css" />
 
-<head th:replace="fragments/header :: header">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 </head>
-
 <body>
 
-<div th:replace="fragments/bodyHeader :: bodyHeader" />
+<content>
+    <main>
+        <!--    <div class="inner">-->
+        <!--        <h3>게시판 관리</h3>-->
+        <!--        <p class="path"><strong>현재 위치 :</strong> <span>게시판 관리</span> <span>리스트형</span> <span>글작성</span></p>-->
+        <!--    </div>-->
+        <!--    <br><br><br>-->
 
-<main>
-<!--    <div class="inner">-->
-<!--        <h3>게시판 관리</h3>-->
-<!--        <p class="path"><strong>현재 위치 :</strong> <span>게시판 관리</span> <span>리스트형</span> <span>글작성</span></p>-->
-<!--    </div>-->
-<!--    <br><br><br>-->
+        <div class="inner">
+            <section>
+                <form id="saveForm" method="post" autocomplete="off">
+                    <!--/* 게시글 수정인 경우, 서버로 전달할 게시글 번호 (PK) */-->
+                    <input type="hidden" id="boardId" name="boardId" th:if="${post != null}" th:value="${post.boardId}" />
 
-    <div class="inner">
-        <section>
-            <form id="saveForm" method="post" autocomplete="off">
-                <!--/* 게시글 수정인 경우, 서버로 전달할 게시글 번호 (PK) */-->
-                <input type="hidden" id="boardId" name="boardId" th:if="${post != null}" th:value="${post.boardId}" />
-
-                <!--/* 서버로 전달할 공지글 여부 */-->
-                <input type="hidden" id="noticeYn" name="noticeYn" />
-                <table class="tb tb_row">
-                    <colgroup>
-                        <col style="width:15%;" /><col style="width:35%;" /><col style="width:15%;" /><col style="width:35%;" />
-                    </colgroup>
-                    <tbody>
-
-
-                    <tr>
-                        <th>제목 <span class="es"></span></th>
-                        <td colspan="3"><input type="text" id="title" name="title" maxlength="50" placeholder="제목을 입력해 주세요." /></td>
-                    </tr>
-
-                    <tr>
-                        <th>작성자 <span class="es"></span></th>
-                        <td colspan="3"><input type="text" id="memberId" name="memberId" maxlength="10" placeholder="ID를 입력해 주세요." /></td>
-                    </tr>
-
-                    <tr>
-                        <th>식당 <span class="es"></span></th>
-                        <td colspan="3">
-<!--                            <input type="text" id="shopId" name="shopId" maxlength="10" placeholder="이름을 입력해 주세요." />-->
-<!--                            <select id="shopId" name="shopId" th:field="*{shopId}">-->
-                            <select id="shopId" name="shopId" style="width:220px">
-                                <option value="">---     선택     ---</option>
-<!--                                <option value="3">안동한우갈비</option>-->
-<!--                                <option value="4">거북이금고</option>-->
-<!--                                <option value="5">바른돼지</option>-->
-<!--                                <option value="6">고등어다찌</option>-->
-                                <option th:each="shop : ${allShops}" th:value="${shop?.shopId}" th:utext="${shop?.name}">고등어다찌</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                                                <th scope="row">공지글</th>
-                                                <td><span class="chkbox"><input type="checkbox" id="isNotice" name="isNotice" class="chk" /><i></i><label for="isNotice"> 설정</label></span></td>
-
-                        <th scope="row">등록일</th>
-                        <td colspan="3"><input type="text" id="createdDate" name="createdAt" readonly /></td>
-                    </tr>
-
-                    <tr>
-                        <th>내용 <span class="es"></span></th>
-                        <td colspan="3"><textarea id="content" name="content" cols="50" rows="10" placeholder="내용을 입력해 주세요."></textarea></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </form>
-            <p class="btn_set">
-                <button type="button" id="saveBtn" onclick="savePost();" class="btns btn_st3 btn_mid">저장</button>
-                <a th:href="@{/review/list}" class="btns btn_bdr3 btn_mid">전체글</a>
-            </p>
-        </section>
-    </div> <!--/* .content */-->
-</main>
+                    <!--/* 서버로 전달할 공지글 여부 */-->
+                    <input type="hidden" id="noticeYn" name="noticeYn" />
+                    <table class="tb tb_row">
+                        <colgroup>
+                            <col style="width:15%;" /><col style="width:35%;" /><col style="width:15%;" /><col style="width:35%;" />
+                        </colgroup>
+                        <tbody>
 
 
-<div class="inner">
-    <div th:replace="fragments/footer :: footer" />
-</div>
+                        <tr>
+                            <th>제목 <span class="es"></span></th>
+                            <td colspan="3"><input type="text" id="title" name="title" maxlength="50" placeholder="제목을 입력해 주세요." /></td>
+                        </tr>
+
+                        <tr>
+                            <th>작성자 <span class="es"></span></th>
+                            <td colspan="3"><input type="text" id="memberId" name="memberId" maxlength="10" placeholder="ID를 입력해 주세요." /></td>
+                        </tr>
+
+                        <tr>
+                            <th>식당 <span class="es"></span></th>
+                            <td colspan="3">
+                                <!--                            <input type="text" id="shopId" name="shopId" maxlength="10" placeholder="이름을 입력해 주세요." />-->
+                                <!--                            <select id="shopId" name="shopId" th:field="*{shopId}">-->
+                                <select id="shopId" name="shopId" style="width:220px">
+                                    <option value="">---     선택     ---</option>
+                                    <option th:each="shop : ${allShops}" th:value="${shop?.shopId}" th:utext="${shop?.name}">고등어다찌</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+<!--                            <th scope="row">공지글</th>-->
+<!--                            <td><span class="chkbox"><input type="checkbox" id="isNotice" name="isNotice" class="chk" /><i></i><label for="isNotice"> 설정</label></span></td>-->
+
+                            <th scope="row">등록일</th>
+                            <td colspan="3"><input type="text" id="createdDate" name="createdAt" readonly /></td>
+                        </tr>
+
+                        <tr>
+                            <th>내용 <span class="es"></span></th>
+                            <td colspan="3"><textarea id="content" name="content" cols="50" rows="10" placeholder="내용을 입력해 주세요."></textarea></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </form>
+                <p class="btn_set">
+                    <button type="button" id="saveBtn" onclick="savePost();" class="btns btn_st3 btn_mid">저장</button>
+                    <a th:href="@{/review/list}" class="btns btn_bdr3 btn_mid">전체글</a>
+                </p>
+            </section>
+        </div> <!--/* .content */-->
+    </main>
+
+
 <script th:src="@{/js/function.js}"></script>
 <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
 <script th:src="@{/js/common.js}"></script>
@@ -146,6 +141,6 @@
 
         /*]]>*/
         </script>
-
+</content>
 </body>
 </html>
