--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -5,14 +5,27 @@
     <title>⚓리뷰</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/themes/smoothness/jquery-ui.css}">
+
+    <style>
+        .table-striped>tbody>tr:nth-child(odd)>td,
+        .table-striped>tbody>tr:nth-child(odd)>th {
+         background-color: red; // Choose your own color here
+ }
+    </style>
+
 </head>
 <body>
 
 <content>
     <main>
         <div class="content inner">
+
+            <div class="py-3 text-center">
+                <h4>⚓리뷰</h4>
+            </div>
+
             <section>
-                <table class="tb tb_row" width="900" border="1" cellpadding="100">
+                <table class="table table-striped table-bordered" border="1" cellpadding="100">
                     <colgroup>
                         <col style="width:10%;" /><col style="width:23%;" /><col style="width:10%;" /><col style="width:23%;" />
                     </colgroup>
@@ -45,11 +58,23 @@
                     </tr>
                     </tbody>
                 </table>
-                <p class="btn_set">
-                    <a th:href="@{/review/new( boardId=${post.boardId} )}" class="btns btn_bdr4 btn_mid">수정</a>
-                    <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>
-                    <a th:href="@{/review/list}" class="btns btn_bdr3 btn_mid">목록</a>
-                </p>
+<!--                <p class="btn_set">-->
+<!--                    <a th:href="@{/review/new( boardId=${post.boardId} )}" class="btns btn_bdr4 btn_mid">수정</a>-->
+<!--                    <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>-->
+<!--                    <a th:href="@{/review/list}" class="btns btn_bdr3 btn_mid">목록</a>-->
+<!--                </p>-->
+
+                <div>
+                    <button type="button" class="btn btn-info" th:onclick="|location.href='@{/review/new( boardId=${post.boardId} )}'|">
+                        수정
+                    </button>
+                    <button type="button" class="btn btn-info" th:onclick="deletePost();">
+                        삭제
+                    </button>
+                    <button type="button" class="btn btn-info" th:onclick="|location.href='@{/review/list}'|">
+                        목록
+                    </button>
+                </div>
             </section>
         </div> <!--/* .content */-->
     </main>
