--- a/src/main/resources/templates/members/loginForm.html
+++ b/src/main/resources/templates/members/loginForm.html
@@ -3,8 +3,8 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>⚓로그인</title>
-<!--    <link rel="stylesheet" th:href="@{/style.css}" />-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/style.css}" />
 <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
 <!--    <link rel="stylesheet" th:href="@{/themes/smoothness/jquery-ui.css}">-->
 
@@ -20,7 +20,7 @@
 <content>
 
     <div class="py-5 text-center">
-        <h4>⚓로그인</h4>
+        <h4>⚓로그인 해주세요</h4>
     </div>
 
     <div class="inner">
