--- a/src/main/resources/templates/review/reviewList.html
+++ b/src/main/resources/templates/review/reviewList.html
@@ -4,6 +4,7 @@
 <head>
     <title>⚓리뷰</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/style.css}" />
 </head>
 <body>
 
