--- a/src/main/resources/templates/review/reviewWrite.html
+++ b/src/main/resources/templates/review/reviewWrite.html
@@ -5,6 +5,8 @@
     <title>⚓리뷰 작성</title>
     <!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/style.css}" />
+
 </head>
 
 <style>
